--- a/app/src/main/res/layout/activity_recycler_grid.xml
+++ b/app/src/main/res/layout/activity_recycler_grid.xml
@@ -10,4 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.melvin.tprecyclerview.RecyclerGridActivity">
 
+    <TextView
+        android:text="RecyclerGridActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView2" />
 </RelativeLayout>
