--- a/app/src/main/res/layout/activity_recycler_list.xml
+++ b/app/src/main/res/layout/activity_recycler_list.xml
@@ -10,4 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.melvin.tprecyclerview.RecyclerListActivity">
 
+    <TextView
+        android:text="RecyclerListActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
