--- a/app/src/main/res/layout/activity_recycler_list.xml
+++ b/app/src/main/res/layout/activity_recycler_list.xml
@@ -18,4 +18,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
